# gh-copilot-demo

./: README.md  gh-copilot-demo.sln
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: python-coding.agent.md  python-dev.agent.md
.github/prompts/: python-best-practices.prompt.md
albums-api-python/: README.md  pyproject.toml
albums-api-python/src/albums_api/: __init__.py  app.py  models.py  repository.py
albums-api-python/tests/: test_api.py
